added front end authentication to $events-application
